2011-03-11  Oliver Hader <oliver.hader@typo3.org>

	* Intial remake of the the dropped PlUpload feature of TYPO3 4.5.0
	* Fixed bug: Stylesheets are not loaded correctly