@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "plupload".
 #
-# Auto generated 11-03-2011 15:54
+# Auto generated 11-03-2011 15:56
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -43,7 +43,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:33:{s:9:"ChangeLog";s:4:"9a47";s:16:"ext_autoload.php";s:4:"6dfa";s:12:"ext_icon.gif";s:4:"b4e6";s:17:"ext_localconf.php";s:4:"cdf9";s:14:"ext_tables.php";s:4:"f74d";s:23:"Classes/AjaxHandler.php";s:4:"d86f";s:30:"Classes/Hooks/AbstractHook.php";s:4:"846b";s:29:"Classes/Hooks/BackendHook.php";s:4:"c5db";s:31:"Classes/Hooks/ClickMenuHook.php";s:4:"da3e";s:30:"Classes/Hooks/TemplateHook.php";s:4:"39f8";s:32:"Classes/XClass/TYPO3_tcefile.php";s:4:"183b";s:40:"Resources/Private/Language/locallang.xml";s:4:"b2db";s:48:"Resources/Public/External/plupload/changelog.txt";s:4:"905f";s:46:"Resources/Public/External/plupload/license.txt";s:4:"3515";s:44:"Resources/Public/External/plupload/readme.md";s:4:"66d9";s:45:"Resources/Public/External/plupload/readme.txt";s:4:"cffa";s:51:"Resources/Public/External/plupload/js/gears_init.js";s:4:"428c";s:66:"Resources/Public/External/plupload/js/jquery.plupload.queue.min.js";s:4:"cd08";s:65:"Resources/Public/External/plupload/js/plupload.browserplus.min.js";s:4:"9eef";s:59:"Resources/Public/External/plupload/js/plupload.flash.min.js";s:4:"fc0d";s:56:"Resources/Public/External/plupload/js/plupload.flash.swf";s:4:"0047";s:58:"Resources/Public/External/plupload/js/plupload.full.min.js";s:4:"a7b6";s:58:"Resources/Public/External/plupload/js/plupload.full.tmp.js";s:4:"f164";s:59:"Resources/Public/External/plupload/js/plupload.gears.min.js";s:4:"99a3";s:59:"Resources/Public/External/plupload/js/plupload.html4.min.js";s:4:"8240";s:59:"Resources/Public/External/plupload/js/plupload.html5.min.js";s:4:"13bf";s:53:"Resources/Public/External/plupload/js/plupload.min.js";s:4:"bac2";s:65:"Resources/Public/External/plupload/js/plupload.silverlight.min.js";s:4:"6925";s:45:"Resources/Public/JavaScript/PluploadWindow.js";s:4:"e448";s:46:"Resources/Public/JavaScript/ext.ux.plupload.js";s:4:"e5ec";s:37:"Resources/Public/JavaScript/helper.js";s:4:"036c";s:60:"Resources/Public/StyleSheet/structure_module_file_upload.css";s:4:"1ff8";s:57:"Resources/Public/StyleSheet/visual_module_file_upload.css";s:4:"8641";}',
+	'_md5_values_when_last_written' => 'a:32:{s:9:"ChangeLog";s:4:"e8f5";s:16:"ext_autoload.php";s:4:"6dfa";s:12:"ext_icon.gif";s:4:"b4e6";s:17:"ext_localconf.php";s:4:"fc41";s:14:"ext_tables.php";s:4:"f74d";s:23:"Classes/AjaxHandler.php";s:4:"d86f";s:30:"Classes/Hooks/AbstractHook.php";s:4:"846b";s:29:"Classes/Hooks/BackendHook.php";s:4:"c5db";s:31:"Classes/Hooks/ClickMenuHook.php";s:4:"da3e";s:30:"Classes/Hooks/TemplateHook.php";s:4:"39f8";s:40:"Resources/Private/Language/locallang.xml";s:4:"b2db";s:48:"Resources/Public/External/plupload/changelog.txt";s:4:"f187";s:46:"Resources/Public/External/plupload/license.txt";s:4:"7514";s:44:"Resources/Public/External/plupload/readme.md";s:4:"66d9";s:45:"Resources/Public/External/plupload/readme.txt";s:4:"58ba";s:51:"Resources/Public/External/plupload/js/gears_init.js";s:4:"428c";s:66:"Resources/Public/External/plupload/js/jquery.plupload.queue.min.js";s:4:"cd08";s:65:"Resources/Public/External/plupload/js/plupload.browserplus.min.js";s:4:"9eef";s:59:"Resources/Public/External/plupload/js/plupload.flash.min.js";s:4:"fc0d";s:56:"Resources/Public/External/plupload/js/plupload.flash.swf";s:4:"0047";s:58:"Resources/Public/External/plupload/js/plupload.full.min.js";s:4:"a7b6";s:58:"Resources/Public/External/plupload/js/plupload.full.tmp.js";s:4:"4a25";s:59:"Resources/Public/External/plupload/js/plupload.gears.min.js";s:4:"99a3";s:59:"Resources/Public/External/plupload/js/plupload.html4.min.js";s:4:"8240";s:59:"Resources/Public/External/plupload/js/plupload.html5.min.js";s:4:"13bf";s:53:"Resources/Public/External/plupload/js/plupload.min.js";s:4:"bac2";s:65:"Resources/Public/External/plupload/js/plupload.silverlight.min.js";s:4:"6925";s:45:"Resources/Public/JavaScript/PluploadWindow.js";s:4:"e448";s:46:"Resources/Public/JavaScript/ext.ux.plupload.js";s:4:"e5ec";s:37:"Resources/Public/JavaScript/helper.js";s:4:"036c";s:60:"Resources/Public/StyleSheet/structure_module_file_upload.css";s:4:"1ff8";s:57:"Resources/Public/StyleSheet/visual_module_file_upload.css";s:4:"8641";}',
 	'suggests' => array(
 	),
 );
